--- a/插值表达式闪烁.html
+++ b/插值表达式闪烁.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -31,4 +31,35 @@
          })
     </script>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div id="app">
+            
+            <h1> {{ msg }} </h1>
+            <h1> {{ msg }} </h1>
+            <h1> {{ msg }} </h1>
+            <h1> {{ msg }} </h1>
+            <h1> {{ msg }} </h1>
+            <h1> {{ msg }} </h1>
+        </div>
+
+        <script src="./vue.js"></script>
+        <script>
+            const vm = new Vue({
+                el: '#app',
+                data: {
+                    msg: 'hello vue'
+                }
+            })
+        </script>
+    </body>
 </html>
